--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(COCA.calibration)
 export(COCA.getOC)
 import(cli)
+import(coda)
+import(isotone)
 import(rjags)
 import(runjags)
+import(stats)
 import(tibble)
