--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,14 @@
 
 export(COCA.calibration)
 export(COCA.getOC)
+import(RcppEigen)
 import(cli)
 import(coda)
 import(isotone)
+import(pbapply)
 import(rjags)
 import(runjags)
 import(stats)
 import(tibble)
+importFrom(Rcpp,sourceCpp)
+useDynLib(COCA, .registration = TRUE)
